Fixed layout responsiveness to cater for larger screens. Fixed overflow that was adding a blank space under the clock.

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -835,7 +835,7 @@ pre code {
 
 @media (min-width: 992px) {
     .container {
-        width: 600px;
+        width: 900px;
     }
 }
 
